apps/parksmap/parksmap-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parksmap
  name: parksmap
  namespace: parksmap
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: parksmap
---
